--- a/lib/styles.css
+++ b/lib/styles.css
@@ -3,3 +3,17 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.image-container {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width:500px;
+}
