--- a/lib/styles.css
+++ b/lib/styles.css
@@ -2,6 +2,18 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
+
+  animation: shake 1s;
+  animation-iteration-count: infinite;
+
+@keyframes shake {
+  0% { transform: translate(1px, 2px) rotate(0deg); }
+  20% { transform: translate(-3px, 0px) rotate(5deg); }
+  40% { transform: translate(1px, -1px) rotate(-5deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  80% { transform: translate(-1px, -1px) rotate(5deg); }
+  100% { transform: translate(1px, -2px) rotate(-5deg); }
+}
 }
 
 .image-container {
@@ -16,4 +28,10 @@
   left: 50%;
   transform: translate(-50%, -50%);
   max-width:500px;
+}
+
+.square {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
