--- a/lib/styles.css
+++ b/lib/styles.css
@@ -22,12 +22,13 @@
   color: white;
 }
 
-.centered {
+.advice-text {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  max-width:500px;
+  max-width:200px;
+  font-size: 20px;
 }
 
 .square {
